--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
     <title>Saturejka</title>
   </head>
   <body>
+    <img src="img/logo.png" class="logo" />
+
     <h1>Naše nabídka</h1>
     <p>
       Vybraná jídla z našeho jarního menu přepravená našimi prvotřídními
       šefkuchaři.
     </p>
+    <ul>
+      <li><a src="img/dish1.jpg"></a></li>
+    </ul>
   </body>
 </html>
