prehozeni textu, pridani obrazku do ul

--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
   </head>
   <body>
     <img src="img/logo.png" class="logo" />
-
-    <h1>Naše nabídka</h1>
     <p>
       Vybraná jídla z našeho jarního menu přepravená našimi prvotřídními
       šefkuchaři.
     </p>
+    <h1>Naše nabídka</h1>
+
     <ul>
-      <li><a src="img/dish1.jpg"></a></li>
+      <li><img src="img/home1.jpg" /></li>
+      <li><img src="img/home2.jpg" /></li>
+      <li><img src="img/home3.jpg" /></li>
     </ul>
   </body>
 </html>
