--- a/index.html
+++ b/index.html
@@ -14,40 +14,52 @@
     <h1>Naše nabídka</h1>
 
     <div class="img-bar">
-      <img src="img/home1.jpg" />
-      <img src="img/home2.jpg" />
-      <img src="img/home3.jpg" />
+      <div class="div-1-of-3">
+        <img src="img/home1.jpg" />
+      </div>
+      <div class="div-1-of-3">
+        <img src="img/home2.jpg" />
+      </div>
+      <div class="div-1-of-3">
+        <img src="img/home3.jpg" />
+      </div>
     </div>
 
-    <div class="textp">
-      <p>
-        Architektonický skvost láká své hosty atmosférou ve stylu Grand Café již
-        od roku 1922 nejen unikátními keramickými dekoracemi. Kvalitní servis,
-        prvotřídní kuchyně a dostupné ceny v luxusním prostředí - to je
-        resaurace Saturejka.
-      </p>
+    <div class="textp-flex">
+      <div class="textp">
+        <p>
+          Architektonický skvost láká své hosty atmosférou ve stylu Grand Café
+          již od roku 1922 nejen unikátními keramickými dekoracemi. Kvalitní
+          servis, prvotřídní kuchyně a dostupné ceny v luxusním prostředí - to
+          je resaurace Saturejka.
+        </p>
+      </div>
+
+      <div class="textp">
+        <p>
+          Saturejka není jen restaurace, ale také kavárna, která navazuje na
+          svou slávu z první republiky. Naše dorty jsou výjimečné svou chutí a
+          jsou vyrobeny z prvotřídních surovin. Dort si můžete vychutnat v
+          krásném prostředí našeho vnitrobloku nebo si jej odnést s sebou.
+        </p>
+      </div>
     </div>
-    <div class="textp">
-      <p>
-        Saturejka není jen restaurace, ale také kavárna, která navazuje na svou
-        slávu z první republiky. Naše dorty jsou výjimečné svou chutí a jsou
-        vyrobeny z prvotřídních surovin. Dort si můžete vychutnat v krásném
-        prostředí našeho vnitrobloku nebo si jej odnést s sebou.
-      </p>
-    </div>
-    <div class="textp2">
-      <p>
-        Jedinečný kulinářský zážitek z jídla v naší restauraci je umocněn
-        prémiovým porcelánem značky Vilém & Švec. Klasická, elegantní a přitom
-        dokonale nadčasová kolekce vás nadchne stejně jako nás. Těšíme se na
-        vaši návštěvu!
-      </p>
-    </div>
-    <div class="textp2">
-      <p>
-        Saturejka a její privátní salonky jsou dokonalým místem pro setkání,
-        oslavy či firemní akce.
-      </p>
+
+    <div class="textp-flex">
+      <div class="textp">
+        <p>
+          Jedinečný kulinářský zážitek z jídla v naší restauraci je umocněn
+          prémiovým porcelánem značky Vilém & Švec. Klasická, elegantní a přitom
+          dokonale nadčasová kolekce vás nadchne stejně jako nás. Těšíme se na
+          vaši návštěvu!
+        </p>
+      </div>
+      <div class="textp">
+        <p>
+          Saturejka a její privátní salonky jsou dokonalým místem pro setkání,
+          oslavy či firemní akce.
+        </p>
+      </div>
     </div>
   </body>
 </html>
