--- a/index.html
+++ b/index.html
@@ -66,6 +66,64 @@
           </p>
         </div>
       </div>
+
+      <div class="losos menu">
+        <div>
+          <img src="img/dish1.jpg" />
+        </div>
+
+        <div class="lososText menuText">
+          <h2>Losos se zeleninou</h2>
+          <p>
+            Je libo lehčí večeře? Nač hledat, když ji pro vás máme už
+            připravenou! Vyzkoušejte pečeného lososa na bylinkách s dušenou
+            jarní zeleninou a bylinkovým máslem,. Veškeré ryby objednáváme
+            čerstvé u prémiových a ověřených dodavatelů.
+          </p>
+          <button type="text" class="btn">Zobrazit menu</button>
+        </div>
+      </div>
+
+      <div class="tagliatelleMenu menu">
+        <div class="menuText">
+          <h2>Losos se zeleninou</h2>
+          <p>
+            Pochutnejte si na našem tagliatelle s kuřecím masem s bazalkou a
+            smetanovou omáčkou. Vynikající lehký oběd pro slunné jarní dny.
+            Kuřecí maso pochuzí od lokálních dodavatelů z kuřat chovaných pod
+            širým nebem. Těstoviny vyrábíme ručně přimo u nás.
+          </p>
+          <button type="text" class="btn">Zobrazit menu</button>
+        </div>
+
+        <div>
+          <img src="img/dish2.jpg" />
+        </div>
+      </div>
+
+      <div class="melancholie menu">
+        <div>
+          <img src="img/dish3.jpg" />
+        </div>
+
+        <div class="melancholie menuText">
+          <h2>Losos se zeleninou</h2>
+          <p>
+            Připomeňte si atmosféru sluncem zalité Provence díky jedinečené
+            sladkokyselé chuťi našeho ctironového dortu s polevou z bílé
+            čokolády. Vychutnejte si jej spolu s hrnkem dobré kávy na naší
+            vnitroblokové zahrádce, která poskytuje útočiště před ruchem
+            velkoměsta.
+          </p>
+          <button type="text" class="btn">Zobrazit menu</button>
+        </div>
+      </div>
     </div>
+
+    <p class="zakonceni">
+      Veškerý obsah těchto webových stránek je zcela smyšlený a určený pouze pro
+      studijní účely Czechitas Digitální akademie Web. Jakákoliv podobnost s již
+      existujícími stránkami je čistě náhodná.
+    </p>
   </body>
 </html>
