--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
         <div class="div-1-of-3">
           <img src="img/home1.jpg" />
         </div>
-        <div class="div-1-of-3">
+        <div class="div-1-of-3 second">
           <img src="img/home2.jpg" />
         </div>
-        <div class="div-1-of-3">
+        <div class="div-1-of-3 third">
           <img src="img/home3.jpg" />
         </div>
       </div>
 
       <div class="textp-flex">
-        <div class="textp">
+        <div class="textp textpMargin">
           <p>
             Architektonický skvost láká své hosty atmosférou ve stylu Grand Café
             již od roku 1922 nejen unikátními keramickými dekoracemi. Kvalitní
@@ -40,7 +40,7 @@
           </p>
         </div>
 
-        <div class="textp">
+        <div class="textp textpMargin">
           <p>
             Saturejka není jen restaurace, ale také kavárna, která navazuje na
             svou slávu z první republiky. Naše dorty jsou výjimečné svou chutí a
@@ -122,8 +122,9 @@
 
     <p class="zakonceni">
       Veškerý obsah těchto webových stránek je zcela smyšlený a určený pouze pro
-      studijní účely Czechitas Digitální akademie Web. Jakákoliv podobnost s již
-      existujícími stránkami je čistě náhodná.
+      studijní účely Czechitas Digitální<br />
+      akademie Web. Jakákoliv podobnost s již existujícími stránkami je čistě
+      náhodná.
     </p>
   </body>
 </html>
