--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <body>
     <img src="img/logo.png" class="logo" />
     <p>
-      Přijďte se potěšit naši chutnou a originální kuchyní v příjemném a milém
-      prostředí.
+      Přijďte se potěšit naši chutnou a originální kuchyní<br />
+      v příjemném a milém prostředí.
     </p>
     <div class="container">
       <h1>Naše nabídka</h1>
       <p>
-        Vybraná jídla z našeho jarního menu připravená našimi prvotřídními
-        šefkuchaři.
+        Vybraná jídla z našeho jarního menu připravená<br />
+        našimi prvotřídními šefkuchaři.
       </p>
 
       <div class="img-bar">
