pridan margin-top

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   </head>
   <body>
     <img src="img/logo.png" class="logo" />
-    <p>
+    <p class="pmezery">
       Přijďte se potěšit naši chutnou a originální kuchyní<br />
       v příjemném a milém prostředí.
     </p>
     <div class="container">
       <h1>Naše nabídka</h1>
-      <p>
+      <p class="pmezery">
         Vybraná jídla z našeho jarního menu připravená<br />
         našimi prvotřídními šefkuchaři.
       </p>
